--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "back-end",
   "version": "1.0.0",
   "engines": {
-    "node": "21.7.2"
+    "node": ">=14.21.3"
   },
   "description": "",
   "main": "server.js",
@@ -17,7 +17,6 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "expres": "^0.0.5",
     "express": "^4.18.3",
     "nodemon": "^3.1.0",
     "pg": "^8.11.3",
