--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=margintool
-DB_USER=postgres
-DB_PASSWORD=123
+LO_DB_HOST=localhost
+LO_DB_PORT=5432
+LO_DB_NAME=margintool
+LO_DB_USER=postgres
+LO_DB_PASSWORD=123
